# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added the new dns-service-discovery script which uses DNS-SD
  to identify services. DNS-SD is one part of automatic configuration
  technologies known by names such as Bonjour, Rendezvous, and
  Zeroconf. This one script can provide as much information as a full
  port scan in some cases. [Patrik Karlsson]

o [NSE] Added a new library, afp.lua, and a script that uses it,
  afp-showmount. The library is for the Apple Filing Protocol and the
  script shows shares and their permissions. [Patrik Karlsson]

o Fixed a bug with the decoding of NMAP OID component values greater
  than 127. [Patrik Karlsson, David]

o Added an Apple Filing Protocol service probe that detects Netatalk
  servers. (Apple's AFP servers are coincidentally triggered by the
  SSLSessionReq probe.) [Patrik Karlsson]

Nmap 5.20 [2010-01-20]

o Dramatically improved the version detection database, integrating
  2,596 submissions that users contributed since February 3, 2009!
  More than a thousand signatures were added, bringing the total to
  8,501. Many existing signatures were improved as well. Please keep
  those submissions and corrections coming! Nmap prints a submission
  URL and fingerprint when it receives responses it can't yet
  interpret.

o [NSE] Added a new script, oracle-sid-brute, which queries the Oracle
  TNS-listener for default instance/sid names. The SID enumeration
  list was prepared by Red Database security. See
  http://nmap.org/nsedoc/scripts/oracle-sid-brute.html. [Patrik
  Karlsson]

o [Ncat] The --ssl, --output, and --hex-dump options now work with
  --exec and --sh-exec. Among other things, this allows you to make a
  program's I/O available over the network wrapped in SSL encryption
  for security.  It is implemented by forking a separate process to
  handle network communications and relay the data to the
  sub-process. [Venkat, David]

o Nmap now tries start the WinPcap NPF service on Windows if it is not